--- a/package.json
+++ b/package.json
@@ -20,14 +20,15 @@
     "clear": "rimraf extension"
   },
   "devDependencies": {
-    "@types/chrome": "^0.0.197",
-    "@types/fs-extra": "^9.0.13",
-    "@types/node": "^18.7.6",
+    "@types/chrome": "^0.0.224",
+    "@types/fs-extra": "^11.0.1",
+    "@types/webextension-polyfill": "^0.26.0",
+    "@types/node": "^18.15.5",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
     "@typescript-eslint/parser": "^5.33.1",
-    "@vitejs/plugin-vue": "^3.1.2",
-    "@vue/compiler-sfc": "^3.2.40",
-    "autoprefixer": "^10.4.8",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/compiler-sfc": "^3.2.47",
+    "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -36,23 +37,22 @@
     "eslint-plugin-jest": "^26.8.3",
     "eslint-plugin-vue": "^9.3.0",
     "esno": "^0.16.3",
-    "fs-extra": "^10.1.0",
-    "kolorist": "^1.5.1",
+    "fs-extra": "^11.1.1",
+    "kolorist": "^1.7.0",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "rollup-plugin-visualizer": "^5.7.1",
+    "rimraf": "^4.4.2",
+    "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.54.4",
     "ts-node": "^10.9.1",
-    "tsup": "^6.2.3",
-    "typescript": "^4.8.4",
-    "unplugin-auto-import": "^0.11.2",
-    "unplugin-vue-components": "^0.22.8",
-    "vite": "^3.1.7",
-    "vue-eslint-parser": "^9.0.3",
-    "webextension-polyfill-ts": "^0.26.0"
+    "tsup": "^6.7.0",
+    "typescript": "^5.0.2",
+    "unplugin-auto-import": "^0.15.1",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^4.2.1",
+    "vue-eslint-parser": "^9.0.3"
   },
   "dependencies": {
-    "element-plus": "^2.2.17",
-    "vue": "^3.2.40"
+    "element-plus": "2.3.1",
+    "vue": "3.2.47"
   }
 }
